--- a/py_map/templates/index.html
+++ b/py_map/templates/index.html
@@ -869,14 +869,14 @@
                         az_player_count_a++;
                 }
 
-                if (!data[i].name.includes('(')) {
-                    console.log("[js] Found player in map: " + data[i].map);
-                    if (data[i].map === 530) {
-                        starting_map = 1;
-                    } else if (data[i].map === 571) {
-                        starting_map = 2;
-                    }
-                }
+                //if (!data[i].name.includes('(')) {
+                //    console.log("[js] Found player in map: " + data[i].map);
+                //    if (data[i].map === 530) {
+                //        starting_map = 1;
+                //    } else if (data[i].map === 571) {
+                //        starting_map = 2;
+                //    }
+                //}
 
                 // Fix player count
                 if (data[i].map == 530)
@@ -995,7 +995,7 @@
             horde_count[1] = outland_player_count_h;
             horde_count[2] = northrend_player_count_h;
 
-            document.getElementById("server_info").innerHTML='Online: <b style="color: rgb(100,100,100);" onMouseMove="tip(\'<tr><td><img src=\\\'{{ config.img_base }}hordeicon.gif\\\'></td><td><b style=\\\'color: rgb(210,50,30);\\\'>{{ lang_defs.faction[1] }}:</b> <b>\'+total_players_count[1]+\'</b></td></tr><tr><td><img src=\\\'{{ config.img_base }}allianceicon.gif\\\'></td><td><b style=\\\'color: rgb(0,150,190);\\\'>{{ lang_defs.faction[0] }}:</b> <b>\'+total_players_count[0]+\'</b></td></tr>\',2,false);" onMouseOut="h_tip();">{{ lang_defs.total }}</b> '+players_online_count+'';
+            document.getElementById("server_info").innerHTML= "{{ config.core_name }}" + ' | Online: <b style="color: rgb(100,100,100);" onMouseMove="tip(\'<tr><td><img src=\\\'{{ config.img_base }}hordeicon.gif\\\'></td><td><b style=\\\'color: rgb(210,50,30);\\\'>{{ lang_defs.faction[1] }}:</b> <b>\'+total_players_count[1]+\'</b></td></tr><tr><td><img src=\\\'{{ config.img_base }}allianceicon.gif\\\'></td><td><b style=\\\'color: rgb(0,150,190);\\\'>{{ lang_defs.faction[0] }}:</b> <b>\'+total_players_count[0]+\'</b></td></tr>\',2,false);" onMouseOut="h_tip();">{{ lang_defs.total }}</b> '+players_online_count+'';
 
             for(i = 0; i < maps_count; i++) {
                 document.getElementById("server_info").innerHTML += '&nbsp;<b style="color: rgb(160,160,20); cursor:pointer;" onClick="switchworld('+i+');" onMouseMove="tip(\'<tr><td><img src=\\\'{{ config.img_base }}hordeicon.gif\\\'></td><td><b style=\\\'color: rgb(210,50,30);\\\'>{{ lang_defs.faction[1] }}:</b> <b>\'+horde_count[i]+\'</b></td></tr><tr><td><img src=\\\'{{ config.img_base }}allianceicon.gif\\\'></td><td><b style=\\\'color: rgb(0,150,190);\\\'>{{ lang_defs.faction[0] }}:</b> <b>\'+alliance_count[i]+\'</b></td></tr>\',2,false);" onMouseOut="h_tip();">'+maps_name_array[i]+'</b> '+players_count[i]+'';
