--- a/py_map/templates/index.html
+++ b/py_map/templates/index.html
@@ -1187,6 +1187,22 @@
         }
 
         function start() {
+            // Read the viewport size
+            var w = window.innerWidth;
+            var h = window.innerHeight;
+            console.log("Viewport size:", w + "×" + h);
+            if (w > 1430) {
+                console.log("Setting zoom to 90%");
+                // Non-standard but works in all major browsers
+                document.documentElement.style.zoom = "90%";
+                // Could also use a standard-transform approach
+                // by wrapping everything in a container and doing:
+                //var wrap = document.getElementById("zoom-wrap");
+                //wrap.style.transform = "scale(0.9)";
+                //wrap.style.transformOrigin = "top left";
+                //wrap.style.width = (100/0.9) + "%";
+            }
+
             // Force grid mode to false at startup
             var checkbox = document.getElementById('gridModeCheckbox');
             checkbox.checked = false;
